--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="askManager">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="src/css/main.css">
     <title>Document</title>
 </head>
-<body>
+<body ng-controller="AppController">
     <header>
         <nav class="menu">
             <div class="menu_logo">
@@ -17,13 +17,13 @@
                 <div class="menu_logo_item manager animated bounceInRight">Manager</div>
             </div>
             <div class="menu_items animated fadeIn">
-                <a href="" class="active">Sign In</a>
-                <a href="">Sign Up</a>
+                <a href="" class="{{activeSignIn}}" ng-click="changeShowSignComponents()">Sign In</a>
+                <a href="" class="{{activeSignUp}}" ng-click="changeShowSignComponents()">Sign Up</a>
             </div>
         </nav>
     </header>
     <main>
-        <div class="signIn animated bounceInUp">
+        <div class="signIn {{showSignIn}} animated bounceInUp">
             <form>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
@@ -33,7 +33,29 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
-                <button type="submit" class="btn btn-primary">Sign In</button>
+                <button type="submit" class="btn btn-primary" >Sign In</button>
+            </form>
+        </div>
+
+        <div class="signUp {{showSignUp}} animated bounceInRight">
+            <form>
+                <div class="form-group">
+                    <label for="Name">Enter Nickname</label>
+                    <input type="email" class="form-control" id="Name" aria-describedby="emailHelp">
+                </div>
+                <div class="form-group">
+                    <label for="Email">Email address</label>
+                    <input type="email" class="form-control" id="Email" aria-describedby="emailHelp">
+                </div>
+                <div class="form-group">
+                    <label for="Password1">Password</label>
+                    <input type="password" class="form-control" id="Password1">
+                </div>
+                <div class="form-group">
+                    <label for="Password2">Rpeat your password</label>
+                    <input type="password" class="form-control" id="Password2">
+                </div>
+                <button type="submit" class="btn btn-primary">Sign Up</button>
             </form>
         </div>
     </main>
@@ -42,6 +64,9 @@
 
 
     </footer>
+    <script src="src/js/jqueary.min.js"></script>
     <script src="src/js/bootstrap.min.js"></script>
+    <script src="src/js/angular.min.js"></script>
+    <script src="src/js/app.js"></script>
 </body>
 </html>
